charts/pr-queue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pr-queue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pr-queue
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: pr-queue
          image: ghcr.io/imdevinc/pr-queue
          imagePullPolicy: IfNotPresent
          name: pr-queue
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config/queue.yaml
              subPath: queue.yaml
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: config
