charts/pr-queue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pr-queue
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: pr-queue
  type: ClusterIP
